#udpate link index.html

--- a/quantri.html
+++ b/quantri.html
@@ -22,7 +22,7 @@
             <a class="nav-link active" aria-current="page" href="./quantri.html">Trang quản lý phim</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./nguoidung.html">Trang người dùng</a>
+            <a class="nav-link active" aria-current="page" href="./index.html">Trang người dùng</a>
           </li>
         </ul>
       </div>
